// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`snapshot testing the wheel bubble bubble displaying 2 1`] = `
<View
  accessible={true}
  isTVSelectable={true}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    Object {
      "alignItems": "center",
      "alignSelf": "center",
      "borderColor": "#FFFFFF",
      "borderRadius": 100,
      "borderWidth": 3,
      "height": 60,
      "justifyContent": "center",
      "margin": 95,
      "opacity": 1,
      "width": 60,
    }
  }
>
  <Text
    style={
      Object {
        "color": "#FFFFFF",
        "fontSize": 14,
        "fontWeight": "bold",
        "textAlign": "center",
      }
    }
  >
    2
  </Text>
</View>
`;

exports[`snapshot testing the wheel bubble bubble displaying nothing as the wheel end 1`] = `
<View
  style={
    Object {
      "alignItems": "center",
      "alignSelf": "center",
      "height": 60,
      "justifyContent": "center",
      "margin": 95,
      "width": 60,
    }
  }
/>
`;

exports[`snapshot testing the wheel bubble bubble displaying the plus 1`] = `
<View
  style={
    Object {
      "alignItems": "center",
      "alignSelf": "center",
      "borderColor": "#FFFFFF",
      "borderRadius": 100,
      "borderWidth": 3,
      "height": 60,
      "justifyContent": "center",
      "margin": 95,
      "width": 60,
    }
  }
>
  <View
    accessible={true}
    isTVSelectable={true}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      Object {
        "alignItems": "center",
        "alignSelf": "center",
        "borderColor": "#FFFFFF",
        "borderRadius": 100,
        "borderWidth": 3,
        "height": 60,
        "justifyContent": "center",
        "margin": 95,
        "opacity": 1,
        "width": 60,
      }
    }
  >
    <Image
      source={
        Object {
          "testUri": "../../../js/drawables/add_button.png",
        }
      }
      style={
        Object {
          "height": 32,
          "resizeMode": "stretch",
          "width": 32,
        }
      }
    />
  </View>
</View>
`;

exports[`snapshot testing the wheel bubble bubble with BASIC text 1`] = `
<View
  style={
    Object {
      "alignItems": "center",
      "alignSelf": "center",
      "borderColor": "#00AA07",
      "borderRadius": 100,
      "borderWidth": 3,
      "height": 90,
      "justifyContent": "center",
      "margin": 47.5,
      "width": 90,
    }
  }
>
  <Text
    style={
      Object {
        "color": "#FFFFFF",
        "fontSize": 20,
        "fontWeight": "bold",
        "textAlign": "center",
      }
    }
  >
    BASIC
  </Text>
</View>
`;
